@@ -1,7 +1,6 @@
 require 'rubygems'
 require 'rubygems/dependency_list'
 require 'rubygems/installer'
-require 'rubygems/source_info_cache'
 require 'rubygems/spec_fetcher'
 require 'rubygems/user_interaction'
 
